admission/ValidatingAdmissionPolicy/policies/serviceaccount-token-projection/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: serviceaccount-token-projection
spec:
  serviceAccountName: default
  volumes: []
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
